# scikit-TabTrans

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: code-cov.yml  release.yml  testing.yml
docs/: CONTRIBUTING.md  README.md  scikit_tab_tranformer.md
scikit_tab_trans/: scikit_tab_tranformer.py
src/scikit_tab_trans/: __init__.py  scikit_tab_tranformer.py
